--- a/index.css
+++ b/index.css
@@ -1,4 +1,46 @@
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden;
+    background-image: url("./BG.jfif"); 
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 img {
-    max-width: 300px;
-    max-height: 500px;
+    max-width: 500px;
+    max-height: 700px;
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
+}
+
+.images {
+    text-align: center;
+    padding-top: 50px;
+}
+.row {
+    text-align: center;
+}
+button {
+    font-size: smaller;
+}
+.quote, .score {
+    font-size: 138%; color: seashell;
+}
+.score {
+    background-color: rgba(144, 154, 163, 0.63);
+    border-radius: 5px;
+}
+.tayQ {
+    background-color: rgba(172, 20, 20, 0.555);
+}
+.taylor {
+}
+.yeQ {
+    background-color: rgba(65, 105, 225, 0.623);
 }
